@@ -1,3 +1,9 @@
+2008-11-30  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test.c (test_gamma_vlarge): added test for a >= UINT_MAX.
+
+	* gamma.c (gsl_ran_gamma_knuth): handle the case a >= UINT_MAX.
+
 2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>
 
 	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir
